# malintent-llm-firewall

./: .gitignore  README.md  discrepancies_report.md  generated_keywords.txt  implementation_plan.md  index.html  inject.py  logo_animation_preview.html  logo_preview_v2.html  malicious_document.txt  malintent_team_split_v2_tushar_shravya.html  rag_malicious.txt  rag_safe.txt  safe_document.txt  test_api.py  test_matches.py  test_pg.py  test_presets.py  tushar_frontend.diff
.github/workflows/: supabase-keepalive.yml
.vercel/: .env.preview.local  project.json
.vercel/output/: builds.json
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  README.md  RUNBOOK.md  authentication.py  check_live_stats.py  check_sizes.js  config_encryption.py  database.py  docker-compose.yml  extract_keywords.py  fix_db.py  fix_db_api.py  generate_benchmarks.py  generate_csvs.js  generated_keywords.txt  main.py  malintent_full_validation.ps1  models.py  pii_scrubber.py  requirements.txt  run_tests.ps1  schemas.py
backend/data/: gandalf.csv  jailbreak_classification.csv  notinject.csv
backend/malintent/: __init__.py  ml_classifier.py  output_validator.py  pattern_engine.py  risk_scorer.py  semantic_engine.py
backend/migrations/: 007_enable_pgcrypto.sql
backend/notebooks/: dataset_exploration.ipynb  malintent_distilbert_training.ipynb  (+2 more)
docs/: README.md  ablation_results.md  db_encryption_verification.md  evaluation_metrics.md  llm01_prompt_injection.html  llm02_output_handling.html  llm03_06_data_risks.html  llm_secondary_risks.html  model_evaluation.md  output_validator_results.md  owasp_llm_risks.html  report_diagrams.md  research_notes.md  system_architecture.md
extension/: README.md  background.js  content.css  content_script.js  generate_logo.js  manifest.json  popup.css  popup.html  popup.js  token_bridge.js
frontend/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
paper/: 03_system_architecture.txt
sdk/: .gitignore  README.md  pyproject.toml
sdk/examples/: quickstart.py  raise_on_block.py
sdk/malintent/: __init__.py  client.py  exceptions.py  models.py
sdk/tests/: test_client.py
(+94 files in other folders)
